{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 1227,
  "lineage": "fea7a9cc-7cd9-f53b-53e2-6637c8076101",
  "resources": [
    {
      "module": "module.backend_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:security-group/sg-088d473ceee4a13b0",
            "description": "Security group for students-backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088d473ceee4a13b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "From VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "students-backend-sg",
            "name_prefix": "",
            "owner_id": "437147519305",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "students-backend-sg",
              "Project": "students-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-backend-sg",
              "Project": "students-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9994010201bc384"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.db_fetch_task",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:security-group/sg-0632ae7bac01c421e",
            "description": "Security group for students-db-fetch",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0632ae7bac01c421e",
            "ingress": [],
            "name": "students-db-fetch-sg",
            "name_prefix": "",
            "owner_id": "437147519305",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "students-db-fetch-sg",
              "Project": "students-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-db-fetch-sg",
              "Project": "students-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9994010201bc384"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:437147519305:loadbalancer/net/students-nlb/f8b0f7eba2f9487a",
            "arn_suffix": "net/students-nlb/f8b0f7eba2f9487a",
            "dns_name": "students-nlb-f8b0f7eba2f9487a.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:437147519305:loadbalancer/net/students-nlb/f8b0f7eba2f9487a",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "students-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a39c957f2ec7e29"
              },
              {
                "subnet_id": "subnet-0bfead9cb729c990f"
              }
            ],
            "subnets": [
              "subnet-00a39c957f2ec7e29",
              "subnet-0bfead9cb729c990f"
            ],
            "tags": {
              "Env": "dev",
              "Name": "students-nlb",
              "Project": "students-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-nlb",
              "Project": "students-app"
            },
            "vpc_id": "vpc-0d9994010201bc384",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:437147519305:listener/net/students-nlb/f8b0f7eba2f9487a/fd91dd509d68c419",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:437147519305:targetgroup/students-nlb-tg/17fdbe19f47986bc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:437147519305:listener/net/students-nlb/f8b0f7eba2f9487a/fd91dd509d68c419",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:437147519305:loadbalancer/net/students-nlb/f8b0f7eba2f9487a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lb.aws_lb.this",
            "module.lb.aws_lb_target_group.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:437147519305:targetgroup/students-nlb-tg/17fdbe19f47986bc",
            "arn_suffix": "targetgroup/students-nlb-tg/17fdbe19f47986bc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "8080",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:437147519305:targetgroup/students-nlb-tg/17fdbe19f47986bc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:437147519305:loadbalancer/net/students-nlb/f8b0f7eba2f9487a"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "students-nlb-tg",
            "port": 8080,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "students-nlb-tg",
              "Project": "students-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-nlb-tg",
              "Project": "students-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d9994010201bc384"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0841e2947493e3dae",
            "arn": "arn:aws:ec2:us-east-1:437147519305:elastic-ip/eipalloc-0841e2947493e3dae",
            "association_id": "eipassoc-01f8fb536da8b5c1c",
            "domain": "vpc",
            "id": "eipalloc-0841e2947493e3dae",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03bfbfc9a9c495478",
            "private_dns": "ip-10-0-9-88.ec2.internal",
            "private_ip": "10.0.9.88",
            "public_dns": "ec2-52-2-254-2.compute-1.amazonaws.com",
            "public_ip": "52.2.254.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Name": "students-net-nat-eip-1",
              "Project": "students-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-net-nat-eip-1",
              "Project": "students-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059b5040790498bd8",
            "arn": "arn:aws:ec2:us-east-1:437147519305:elastic-ip/eipalloc-059b5040790498bd8",
            "association_id": "eipassoc-0a78c1d1d592fbb5b",
            "domain": "vpc",
            "id": "eipalloc-059b5040790498bd8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08b0e0daf98007212",
            "private_dns": "ip-10-0-19-23.ec2.internal",
            "private_ip": "10.0.19.23",
            "public_dns": "ec2-23-21-148-24.compute-1.amazonaws.com",
            "public_ip": "23.21.148.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Name": "students-net-nat-eip-2",
              "Project": "students-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-net-nat-eip-2",
              "Project": "students-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:internet-gateway/igw-07a221c0aea8e9f8c",
            "id": "igw-07a221c0aea8e9f8c",
            "owner_id": "437147519305",
            "tags": {
              "Env": "dev",
              "Name": "students-net-igw",
              "Project": "students-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-net-igw",
              "Project": "students-app"
            },
            "vpc_id": "vpc-0d9994010201bc384"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0841e2947493e3dae",
            "association_id": "eipassoc-01f8fb536da8b5c1c",
            "connectivity_type": "public",
            "id": "nat-055ee7480f4c980a9",
            "network_interface_id": "eni-03bfbfc9a9c495478",
            "private_ip": "10.0.9.88",
            "public_ip": "52.2.254.2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00a39c957f2ec7e29",
            "tags": {
              "Env": "dev",
              "Name": "students-net-nat-1",
              "Project": "students-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-net-nat-1",
              "Project": "students-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059b5040790498bd8",
            "association_id": "eipassoc-0a78c1d1d592fbb5b",
            "connectivity_type": "public",
            "id": "nat-0c5d3b10d3fe64ae9",
            "network_interface_id": "eni-08b0e0daf98007212",
            "private_ip": "10.0.19.23",
            "public_ip": "23.21.148.24",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bfead9cb729c990f",
            "tags": {
              "Env": "dev",
              "Name": "students-net-nat-2",
              "Project": "students-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-net-nat-2",
              "Project": "students-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0439550833b9852a21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-055ee7480f4c980a9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0439550833b9852a2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0602433f7aeb0630e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c5d3b10d3fe64ae9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0602433f7aeb0630e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07a221c0aea8e9f8c",
            "id": "r-rtb-06d30bb133314d51a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06d30bb133314d51a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:route-table/rtb-0439550833b9852a2",
            "id": "rtb-0439550833b9852a2",
            "owner_id": "437147519305",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-055ee7480f4c980a9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "students-net-private-1-rt",
              "Project": "students-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-net-private-1-rt",
              "Project": "students-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9994010201bc384"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:route-table/rtb-0602433f7aeb0630e",
            "id": "rtb-0602433f7aeb0630e",
            "owner_id": "437147519305",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c5d3b10d3fe64ae9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "students-net-private-2-rt",
              "Project": "students-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-net-private-2-rt",
              "Project": "students-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9994010201bc384"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:route-table/rtb-06d30bb133314d51a",
            "id": "rtb-06d30bb133314d51a",
            "owner_id": "437147519305",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a221c0aea8e9f8c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "students-net-public-rt",
              "Project": "students-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-net-public-rt",
              "Project": "students-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9994010201bc384"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1270be8183c5802",
            "route_table_id": "rtb-0439550833b9852a2",
            "subnet_id": "subnet-0e6945917f5f21d1c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0056a01b2efbfe2a6",
            "route_table_id": "rtb-0602433f7aeb0630e",
            "subnet_id": "subnet-0aca49f44ead05cb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ed8097089df7a8d",
            "route_table_id": "rtb-06d30bb133314d51a",
            "subnet_id": "subnet-00a39c957f2ec7e29"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0064cfecfda4cf187",
            "route_table_id": "rtb-06d30bb133314d51a",
            "subnet_id": "subnet-0bfead9cb729c990f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:subnet/subnet-0e6945917f5f21d1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6945917f5f21d1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437147519305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "students-net-private-1",
              "Project": "students-app",
              "Tier": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-net-private-1",
              "Project": "students-app",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d9994010201bc384"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:subnet/subnet-0aca49f44ead05cb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aca49f44ead05cb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437147519305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "students-net-private-2",
              "Project": "students-app",
              "Tier": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-net-private-2",
              "Project": "students-app",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d9994010201bc384"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:subnet/subnet-00a39c957f2ec7e29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a39c957f2ec7e29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "437147519305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "students-net-public-1",
              "Project": "students-app",
              "Tier": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-net-public-1",
              "Project": "students-app",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d9994010201bc384"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:subnet/subnet-0bfead9cb729c990f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfead9cb729c990f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "437147519305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "students-net-public-2",
              "Project": "students-app",
              "Tier": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-net-public-2",
              "Project": "students-app",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d9994010201bc384"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:vpc/vpc-0d9994010201bc384",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07cd691fe57b032ec",
            "default_route_table_id": "rtb-0b606e84f3fb7df66",
            "default_security_group_id": "sg-08f3665597dc111b9",
            "dhcp_options_id": "dopt-0541a3d073f08c16e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d9994010201bc384",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b606e84f3fb7df66",
            "owner_id": "437147519305",
            "tags": {
              "Env": "dev",
              "Name": "students-net-vpc",
              "Project": "students-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-net-vpc",
              "Project": "students-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:security-group/sg-08138427bdbd97fe6",
            "description": "RDS access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08138427bdbd97fe6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "students-db-rds-sg",
            "name_prefix": "",
            "owner_id": "437147519305",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "students-db-rds-sg",
              "Project": "students-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "students-db-rds-sg",
              "Project": "students-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9994010201bc384"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}